[gd_scene load_steps=3 format=3 uid="uid://osbeo8c4meg5"]

[ext_resource type="Script" path="res://UI/GameSystem/GameUI.gd" id="1"]
[ext_resource type="Script" path="res://UI/GameSystem/SaveButton.gd" id="2"]

[node name="GameUI" type="HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="SaveButton" type="Button" parent="."]
custom_minimum_size = Vector2i(100, 0)
offset_right = 100.0
offset_bottom = 130.0
text = "Save"
script = ExtResource("2")

[node name="GameObjects" type="VBoxContainer" parent="."]
offset_left = 104.0
offset_right = 304.0
offset_bottom = 130.0

[node name="Label" type="Label" parent="GameObjects"]
offset_right = 200.0
offset_bottom = 26.0
text = "Game Objects:"

[node name="GameObjectCollections" type="ItemList" parent="GameObjects"]
clip_contents = false
custom_minimum_size = Vector2i(200, 100)
offset_top = 30.0
offset_right = 200.0
offset_bottom = 130.0
max_columns = 4
same_column_width = true
fixed_column_width = 150
fixed_icon_size = Vector2i(150, 150)

[node name="Scores" type="VBoxContainer" parent="."]
offset_left = 308.0
offset_right = 363.0
offset_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Scores"]
offset_right = 55.0
offset_bottom = 26.0
text = "Scores:"

[node name="ScrollContainer" type="ScrollContainer" parent="Scores"]
offset_top = 30.0
offset_right = 55.0
offset_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Scores/ScrollContainer"]
offset_right = 4.0
offset_bottom = 100.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Scores/ScrollContainer/HBoxContainer"]
offset_bottom = 100.0
size_flags_vertical = 3

[node name="IconTextContainer" type="VBoxContainer" parent="Scores/ScrollContainer/HBoxContainer/ScrollContainer"]
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BarContainer" type="HBoxContainer" parent="Scores/ScrollContainer/HBoxContainer"]
offset_left = 4.0
offset_right = 4.0
offset_bottom = 100.0
